Added README and Landscape Mode

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/team_name_a"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_sixteen"
+                android:layout_marginBottom="@dimen/margin_sixteen"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
                 android:text="@string/team_a"
@@ -33,7 +33,7 @@
                 android:id="@+id/team_a_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_tweentyfour"
+                android:layout_marginBottom="@dimen/margin_eight"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_horizontal"
                 android:text="@string/score_team_a"
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_eight"
                 android:layout_marginEnd="@dimen/margin_tweentyfour"
-                android:layout_marginLeft="@dimen/margin_tweentyfour"
+                android:layout_marginLeft="@dimen/margin_thirdtytwo"
                 android:layout_marginStart="@dimen/margin_tweentyfour"
                 android:background="@color/colorTeamA"
                 android:onClick="addThreePointsTeamA"
@@ -95,7 +95,7 @@
                 android:id="@+id/team_name_b"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_sixteen"
+                android:layout_marginBottom="@dimen/margin_sixteen"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
                 android:text="@string/team_b"
@@ -106,7 +106,7 @@
                 android:id="@+id/team_b_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_tweentyfour"
+                android:layout_marginBottom="@dimen/margin_eight"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_horizontal"
                 android:text="@string/score_team_a"
