--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,163 +2,93 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.example.hasanzian.courtcounter.MainActivity">
 
     <LinearLayout
         android:id="@+id/team_score_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/margin_from_reset_btn"
         android:baselineAligned="false"
-        android:orientation="horizontal"
-        tools:context="com.example.hasanzian.courtcounter.MainActivity">
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+        <LinearLayout style="@style/LinearLayoutCommonStyle">
 
             <TextView
                 android:id="@+id/team_name_a"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_sixteen"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center_horizontal"
+                style="@style/HeadingTextView"
                 android:text="@string/team_a"
-                android:textColor="@color/teamNameColor"
                 android:textSize="@dimen/teamName" />
 
             <TextView
                 android:id="@+id/team_a_score"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_tweentyfour"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center_horizontal"
+                style="@style/ScoreTextView"
                 android:text="@string/score_team_a"
-                android:textColor="@color/scoreTextColor"
                 android:textSize="@dimen/score_txt_size" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_eight"
-                android:layout_marginEnd="@dimen/margin_tweentyfour"
-                android:layout_marginLeft="@dimen/margin_tweentyfour"
-                android:layout_marginStart="@dimen/margin_tweentyfour"
+                style="@style/commonStyle"
                 android:background="@color/colorTeamA"
                 android:onClick="addThreePointsTeamA"
                 android:text="@string/txt_3_points" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:layout_marginBottom="@dimen/margin_eight"
-                android:layout_marginEnd="@dimen/margin_tweentyfour"
-                android:layout_marginLeft="@dimen/margin_tweentyfour"
-                android:layout_marginStart="@dimen/margin_tweentyfour"
-                android:background="#cc12ffc4"
+                style="@style/commonStyle"
+                android:background="@color/btn_background_color_level_two"
                 android:onClick="addTwoPointsTeamA"
                 android:text="@string/txt_2_points" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_eight"
-                android:layout_marginEnd="@dimen/margin_tweentyfour"
-                android:layout_marginLeft="@dimen/margin_tweentyfour"
-                android:layout_marginStart="@dimen/margin_tweentyfour"
-                android:background="#7b1de9b6"
+                style="@style/commonStyle"
+                android:background="@color/btn_background_color_level_three"
                 android:onClick="addOnePointsTeamA"
                 android:text="@string/txt_free_throw" />
 
 
         </LinearLayout>
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/margin_sixteen"
-            android:background="@android:color/darker_gray" />
+        <View style="@style/ViewStyle" />
 
 
-        <LinearLayout
-
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+        <LinearLayout style="@style/LinearLayoutCommonStyle">
 
             <TextView
                 android:id="@+id/team_name_b"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_sixteen"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center_horizontal"
+                style="@style/HeadingTextView"
                 android:text="@string/team_b"
-                android:textColor="@color/teamNameColor"
                 android:textSize="@dimen/teamName" />
 
             <TextView
                 android:id="@+id/team_b_score"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_tweentyfour"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center_horizontal"
+                style="@style/ScoreTextView"
                 android:text="@string/score_team_a"
-                android:textColor="@color/scoreTextColor"
                 android:textSize="@dimen/score_txt_size" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_eight"
-                android:layout_marginEnd="@dimen/margin_tweentyfour"
-                android:layout_marginLeft="@dimen/margin_tweentyfour"
-                android:layout_marginStart="@dimen/margin_tweentyfour"
+                style="@style/commonStyle"
                 android:background="@color/colorTeamB"
                 android:onClick="addThreePointsTeamB"
                 android:text="@string/txt_3_points" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_eight"
-                android:layout_marginEnd="@dimen/margin_tweentyfour"
-                android:layout_marginLeft="@dimen/margin_tweentyfour"
-                android:layout_marginStart="@dimen/margin_tweentyfour"
+                style="@style/commonStyle"
                 android:background="@color/colorTeamBLight"
                 android:onClick="addTwoPointsTeamB"
                 android:text="@string/txt_2_points" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_eight"
-                android:layout_marginEnd="@dimen/margin_tweentyfour"
-                android:layout_marginLeft="@dimen/margin_tweentyfour"
-                android:layout_marginStart="@dimen/margin_tweentyfour"
+                style="@style/commonStyle"
                 android:background="@color/colorTeamBLightShade"
                 android:onClick="addOnePointsTeamB"
                 android:text="@string/txt_free_throw" />
         </LinearLayout>
-
 
     </LinearLayout>
 
 
     <Button
         android:id="@+id/reset_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/margin_thirdtytwo"
-        android:background="@color/resetButtonColor"
-        android:onClick="resetScore"
-        android:text="@string/string_reset" />
+        style="@style/ResetBtnStyle"
+        android:onClick="resetScore" />
 </RelativeLayout>
